# mcp-server-brave-search

./: .gitignore  Cargo.toml  README.md  extension.toml
configuration/: default_settings.jsonc  installation_instructions.md
src/: mcp_server_brave_search.rs
